# pincher

./: .gcconfig  .gitignore  AGENT.md  AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EDUCATIONAL_NOTES.md  GETTING_STARTED.md  LICENSE-APACHE  LOW_LEVEL.md  PLUG_AND_PLAY.md  README.md  TASK.md  install.sh  pincher-fix-task.md  registry_schema.sql  wiring-report.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: agent-workflow.yml  ci.yml  publish_nail.yml
TEMPLATES/: ONBOARDING.md
benchmarks/: embed-benchmark-rtx4050.md  simd-kernel-benchmark.md
blog/: docker-for-agents.md
docs/: AGENT_INTERFACE.md  ARCHITECTURE.md  ARCHITECTURE_DEEP_DIVE.md  CONTEXT.md  CRATES_IO_READINESS.md  FUTURE-INTEGRATION.md  GETTING_STARTED.md  LEGACY_MIGRATION.md  META_HEALTH.md  MVP_CHECKLIST.md  NAIL_FORMAT_SPEC.md  PRIORITY_EVICTION.md  ROADMAP.md  SESSION-STATE.md  SIMULATION_RUNS_3.md  contributing.md  trust-pipeline-integration.md
docs/baton-system/: README.md
docs/prep-notes/: DEMO_SECTION_DRAFT.md  SANDBOX_TEST_FINDING.md  git-dependency-resolution-options.md  mock-feature-gate-verification-trace.md  veto-trait-verification-trace.md
docs/research/: README.md  worklog.md
docs/research/reviews/: PincherOS_Biological_Formalism.md  PincherOS_Playtest_Synthesis_and_Optimized_Prompt.md  a2a-fleet-cudaclaw-design-session.md  cudaclaw-gpu-engineer-analysis.md  pincheros-biological-ecology-r1.md  pincheros-category-theorist-r1.md  pincheros-category-theorist-r2.md  pincheros-category-theory.md  pincheros-chinese-a2a-fleet-synthesis.md  pincheros-cognitive-scientist-r3.md  pincheros-governance-legal-r3.md  pincheros-linguistic-polyformalism.md  pincheros-mvp-spec.md  pincheros-navajo-category-theory-synthesis.md  pincheros-navajo-ontology-analysis.md  pincheros-philosopher-of-mind-r2.md  pincheros-polyformalism-synthesis-r3.md  pincheros-process-philosophy.md  pincheros-r2-gpu-rust-hybrid.md  pincheros-shadowgap-greek-r2.md  pincheros-systems-rustacean-analysis.md  pincheros-thermodynamicist-r3.md
examples/code-review/: README.md
examples/deploy-agent/: README.md
examples/hello-reflex/: README.md
examples/smart-home/: README.md
hybrid-bridge/: Cargo.toml  QUALITY_REPORT.md  README.md
hybrid-bridge/src/: bridge.rs  chaos.rs  cli.rs  datafeed.rs  engine.rs  error.rs  lib.rs  mock_matrix.rs  mock_room.rs  mock_veto.rs  ternary_bridge.rs  types.rs
hybrid-bridge/tests/: cli_tests.rs  full_pipeline_test.rs  integration_tests.rs
pincher-cli/: Cargo.toml  README.md
pincher-cli/src/: main.rs
pincher-core/: Cargo.toml  README.md
pincher-core/examples/: kernel_bench.rs  teach_and_do.rs
pincher-core/src/: daemon.rs  lib.rs  registry.rs  updater.rs
pincher-core/src/capability/: token.rs
pincher-core/src/carapace/: capability.rs  guest.rs  host.rs
pincher-core/src/db/: mod.rs  schema.rs
pincher-core/src/dynamics/: veto.rs
pincher-core/src/embed/: mod.rs  onnx.rs
pincher-core/src/immunology/: antigen.rs  memory.rs
pincher-core/src/intent/: contract.rs  schema.rs
pincher-core/src/kernel/: mod.rs  neon.rs
pincher-core/src/migration/: fingerprint.rs  mod.rs  pack.rs
pincher-core/src/reflex/: confidence.rs  engine.rs  matcher.rs
pincher-core/src/resource/: controller.rs
pincher-core/src/route/: mod.rs
pincher-core/src/rpc/: mod.rs  server.rs
pincher-core/src/sandbox/: bwrap.rs
pincher-core/src/security/: blocklist.rs  mod.rs  saep.rs  sandbox.rs  ternary.rs  veto.rs
pincher-core/src/shell/: probe.rs
pincher-core/src/types/: chord.rs  gastrolith.rs
pincher-core/tests/: integration_tests.rs
pincher-infer/: pyproject.toml
pincher-infer/pincher_infer/: __main__.py
scripts/: regex_compiler.py  self_heal.py
skills/: README.md  agent-migrate.toml  agent-teach.toml  docker-ops.toml  file-search.toml  git-ops.toml  package-manage.toml  system-monitor.md  system-monitor.toml  text-process.toml
src/: daemon.rs  extractor.rs  registry.rs  updater.rs
tests/: e2e_runtime_test.rs
tools/: checkpoint.sh  fleet-scout.sh  gc-fleet.sh  init-context.sh
