[workspace]
resolver = "2"
members = [
    "pincher-core",
    "pincher-cli",
    "hybrid-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SuperInstance <opensource@superinstance.ai>"]
license = "MIT OR Apache-2.0"
description = "PincherOS reflex engine — fast intent-to-action shell for AI agents"
repository = "https://github.com/SuperInstance/pincher"
homepage = "https://github.com/SuperInstance/pincher"
readme = "README.md"
keywords = ["reflex", "agent", "shell", "pincher", "embedding"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
ternary-types = { git = "https://github.com/SuperInstance/ternary-types", rev = "fa01da449de07108b8c99594253bea47e73be956", features = ["serde"] }
silo-core = { git = "https://github.com/SuperInstance/silo-core", rev = "44e776064ccd64cedc875dcafec194d617124902" }
