[package]
name = "hybrid-bridge"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Hybrid Manifold communication backbone — connects Matrix Engine, Room Agents, and Veto Engine"

[dependencies]
pincher-core = { path = "../pincher-core" }
ternary-types = { workspace = true }
ndarray = { version = "0.16", features = ["serde"] }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
arrow = { version = "53", features = ["ipc"] }
async-trait = "0.1"
chrono = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
fastrand = "2.4.1"

[lib]
name = "hybrid_bridge"
path = "src/lib.rs"
