[package]
name = "hybrid-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Hybrid Manifold communication backbone — connects Matrix Engine, Room Agents, and Veto Engine"
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["manifold", "tensor", "agent", "bridge", "pincher"]
categories = ["science", "mathematics", "simulation"]

[dependencies]
pincher-core = { path = "../pincher-core", version = "0.1.0" }
ternary-types = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
ndarray = { version = "0.16", features = ["serde"] }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
arrow = { version = "53", features = ["ipc"] }
async-trait = "0.1"
chrono = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
fastrand = "2.4.1"
csv = "1.3"

[lib]
name = "hybrid_bridge"
path = "src/lib.rs"
