[package]
name = "hybrid-bridge"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Hybrid Manifold communication backbone — connects Matrix Engine, Room Agents, and Veto Engine"
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords = ["manifold", "tensor", "agent", "bridge", "pincher"]
categories = ["science", "mathematics", "simulation"]

[features]
# Exposes the testing/mock modules (`chaos`, `mock_matrix`, `mock_room`,
# `mock_veto`) and their re-exports. Off by default so they are not part of
# the published public API; auto-enabled for `cargo test` via the
# `[dev-dependencies]` self-reference below. See
# docs/prep-notes/mock-feature-gate-verification-trace.md.
mocks = []

[dependencies]
pincher-core = { path = "../pincher-core", version = "0.2.0" }
ternary-types = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
ndarray = { version = "0.16", features = ["serde"] }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
arrow = { version = "53", features = ["ipc"] }
async-trait = "0.1"
chrono = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
fastrand = "2.4.1"
csv = "1.3"

[dev-dependencies]
# `cfg(test)` is not active on this crate when it is compiled as a dependency
# for the integration-test targets in `tests/`, so we enable the `mocks`
# feature here to keep those tests compiling without exposing the mock
# modules in a normal (non-test) downstream build.
hybrid-bridge = { path = ".", version = "0.2.0", features = ["mocks"] }

[lib]
name = "hybrid_bridge"
path = "src/lib.rs"
