[package]
name = "pincher-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["command-line-utilities"]

[[bin]]
name = "pincher"
path = "src/main.rs"

[dependencies]
pincher-core = { path = "../pincher-core", version = "0.2.0" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = { workspace = true }
anyhow = "1"
colored = "2"
