[package]
name = "pincher-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["algorithms", "data-structures", "development-tools"]

[features]
default = []
onnx = ["dep:ort", "dep:ndarray"]
landlock = ["dep:landlock"]
ternary-kernel = []
wasmtime = ["dep:wasmtime"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled", "load_extension"] }
sha2 = "0.10"
anyhow = "1"
gethostname = "0.4"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# System information
sysinfo = "0.33"

# BLAKE3 hashing
blake3 = "1"

# TOML configuration
toml = "0.8"

# Compression and archiving
zstd = "0.13"
tar = "0.4"

# sqlite-vec extension
sqlite-vec = "0.1"

# ONNX Runtime (optional, for real embeddings)
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.17", optional = true }

# Landlock sandboxing (optional, Linux-only)
landlock = { version = "0.4", optional = true }

# WASM runtime (optional, for carapace guest module support)
wasmtime = { version = "27", optional = true }

# Regex for immunology pattern matching
regex = "1"
