[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pincher-infer"
version = "0.1.0"
description = "LLM sidecar for PincherOS — stateless inference bridge"
requires-python = ">=3.10"
dependencies = [
    "jsonrpclib-pelix>=0.4",
    "openai>=1.0,<2.0",
    "sentence-transformers>=2.2,<3.0",
    "numpy>=1.24,<2.0",
    "ollama>=0.1.0",
    "llama-cpp-python>=0.2.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
pincher-infer = "pincher_infer.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pincher_infer*"]
